--- a/index.html
+++ b/index.html
@@ -524,6 +524,21 @@
 						  </div>
 						</div>
 					  </div>
+					  <div class="single-work col-lg-4 col-md-6 col-sm-12 all data_science wow fadeInUp" data-wow-duration="1s">
+						<div class="relative">
+						  <div class="thumb">
+							<div class="overlay overlay-bg"></div>
+							<img class="image img-fluid" src="img/SignLanguage-thumbnail.png" alt="Product Search by Image">
+						  </div>
+						  <div class="middle">
+							<h4>Real-time Sign Language Detection</h4>
+						  </div>
+						  <a class="overlay" href="portfolio-details_sign_language.html"></a>
+						  <div class="project-name-banner text-center">
+							<h5 style="font-size: 18px;">Real-time Sign Language Detection</h5>
+						  </div>
+						</div>
+					  </div>
 
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all data_science wow fadeInUp" data-wow-duration="1s">
 						<div class="relative">
@@ -538,19 +553,7 @@
 							<a class="overlay" href="portfolio-details_recommendation.html"></a>
 						</div>
 					</div>
-					<div class="single-work col-lg-4 col-md-6 col-sm-12 all data_science wow fadeInUp" data-wow-duration="1s">
-						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w1_main.png" alt="">
-							</div>
-							<div class="middle">
-								<h4>Sign Language Detection<br>(Deep Learning)</h4>
-
-							</div>
-							<a class="overlay" href="portfolio-details_sign_language.html"></a>
-						</div>
-					</div>
+					
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all data_science wow fadeInUp" data-wow-duration="1s">
 						<div class="relative">
 							<div class="thumb">
@@ -764,7 +767,7 @@
 						</ul> -->
 						<div class="wow fadeIn" data-wow-duration="1s">
 							<p>
-								C++ <b>|</b> Java <b>|</b> Python <b>|</b> JavaScript <b>|</b> MATLAB
+								Python <b>|</b> C++ <b>|</b> Java <b>|</b> JavaScript <b>|</b> MATLAB
 							</p>
 						</div>
 					</div>
@@ -783,7 +786,7 @@
 						</ul> -->
 						<div class="wow fadeIn" data-wow-duration="1s">
 							<p>
-								Django <b>|</b> Flask <b>|</b> ASP.NET MVC <b>|</b> TensorFlow <b>|</b> Keras <b>|</b> OpenCV <b>|</b> ReactJS <b>|</b> Keras <b>|</b> NumPy <b>|</b> Pandas <b>|</b> Matplotlib <b>|</b> Scikit-learn
+								Flask <b>|</b> Tensorflow <b>|</b> Keras <b>|</b> OpenCV <b>|</b> Pytorch <b>|</b> Angular <b>|</b> React <b>|</b> ASP.NET MVC <b>|</b> NumPy <b>|</b> Pandas <b>|</b> Matplotlib <b>|</b> Scikit-learn
 							</p>
 						</div>
 					</div>
@@ -801,7 +804,7 @@
 						</ul> -->
 						<div class="wow fadeIn" data-wow-duration="1s">
 							<p>
-								SQL <b>|</b> Oracle PL/SQL <b>|</b> Mongodb
+								MySQL <b>|</b> PostgreSQL <b>|</b> SQL <b>|</b> Oracle PL/SQL <b>|</b> Mongodb
 							</p>
 						</div>
 					</div>
@@ -829,7 +832,7 @@ NetBeans <b>|</b> Proteus <b>|</b> Arduino
 				<div class="item">
 					<div class="testi_item">
 						<!--<img src="img/quote.png" alt="">-->
-						<h4>DevOps <b>|</b> Version Control </h4>
+						<h4>DevOps <b>|</b> Deployments <b>|</b> Version Control </h4>
 						<!-- <ul class="list">
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
@@ -839,7 +842,7 @@ NetBeans <b>|</b> Proteus <b>|</b> Arduino
 						</ul> -->
 						<div class="wow fadeIn" data-wow-duration="1s">
 							<p>
-								Docker <b>|</b> Git
+								AWS(EC2, S3, RDS, sagemaker) <b>|</b> Docker <b>|</b> Git (CI/CD)
 							</p>
 						</div>
 					</div>
@@ -868,7 +871,7 @@ NetBeans <b>|</b> Proteus <b>|</b> Arduino
 			<div class="row mt-80">
 				<div class="col-lg-4 col-md-4 animate-box" data-animate-effect="fadeInLeft">
 					<div class="contact-box">
-						<h4>+88 0168 007 1897</h4>
+						<h4>+81 070 9020 1850</h4>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-4 animate-box" data-animate-effect="fadeInLeft">
@@ -878,7 +881,7 @@ NetBeans <b>|</b> Proteus <b>|</b> Arduino
 				</div>
 				<div class="col-lg-4 col-md-4 animate-box" data-animate-effect="fadeInLeft">
 					<div class="contact-box">
-						<h4>somum.io</h4>
+						<h4>somum.github.io/somum/</h4>
 					</div>
 				</div>
 			</div>
@@ -914,7 +917,7 @@ NetBeans <b>|</b> Proteus <b>|</b> Arduino
 							<h4>Follow Me</h4>
 						</div>
 						<div class="footer-social">
-							<a href="https://www.linkedin.com/in/saiful-somum/"><i class="fa fa-linkedin"></i></a>
+							<a href="https://www.linkedin.com/in/somum/"><i class="fa fa-linkedin"></i></a>
 							<a href="https://github.com/somum"><i class="fa fa-github"></i></a>
 							<a href="https://twitter.com/saiful_somum"><i class="fa fa-twitter"></i></a>
 							<a href="https://www.facebook.com/m.somum/"><i class="fa fa-facebook"></i></a>
