--- a/index.html
+++ b/index.html
@@ -540,46 +540,70 @@
 						</div>
 					  </div>
 
-					<div class="single-work col-lg-4 col-md-6 col-sm-12 all data_science wow fadeInUp" data-wow-duration="1s">
+					  <div class="single-work col-lg-4 col-md-6 col-sm-12 all data_science wow fadeInUp" data-wow-duration="1s">
 						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w6_main.png" alt="">
-							</div>
-							<div class="middle">
-								<h4>AI based<br>recommendation </h4>
-
-							</div>
-							<a class="overlay" href="portfolio-details_recommendation.html"></a>
+						  <div class="thumb">
+							<div class="overlay overlay-bg"></div>
+							<img class="image img-fluid" src="img/speech-to-text-thumbnail.png" alt="Product Search by Image">
+						  </div>
+						  <div class="middle">
+							<h4>Speech to Text (Editable) Conversion</h4>
+						  </div>
+						  <a class="overlay" href="portfolio-details_speech_to_text.html"></a>
+						  <div class="project-name-banner text-center">
+							<h5 style="font-size: 18px;">Speech to Text (Editable) Conversion</h5>
+						  </div>
 						</div>
-					</div>
+					  </div>
+
+					  <div class="single-work col-lg-4 col-md-6 col-sm-12 all data_science wow fadeInUp" data-wow-duration="1s">
+						<div class="relative">
+						  <div class="thumb">
+							<div class="overlay overlay-bg"></div>
+							<img class="image img-fluid" src="img/product-recom.png" alt="Product Search by Image">
+						  </div>
+						  <div class="middle">
+							<h4>AI based product recommendation (prototype)</h4>
+						  </div>
+						  <a class="overlay" href="portfolio-details_recommendation.html"></a>
+						  <div class="project-name-banner text-center">
+							<h5 style="font-size: 18px;"><h4>AI based product recommendation (prototype)</h4></h5>
+						  </div>
+						</div>
+					  </div>
+
+					  <div class="single-work col-lg-4 col-md-6 col-sm-12 all data_science wow fadeInUp" data-wow-duration="1s">
+						<div class="relative">
+						  <div class="thumb">
+							<div class="overlay overlay-bg"></div>
+							<img class="image img-fluid" src="img/attendence-thumbnail.png" alt="Product Search by Image">
+						  </div>
+						  <div class="middle">
+							<h4>Attendance System (Pretrained model)</h4>
+						  </div>
+						  <a class="overlay" href="portfolio-details_attendance.html"></a>
+						  <div class="project-name-banner text-center">
+							<h5 style="font-size: 18px;"><h4>Attendance System (Pretrained model)</h4></h5>
+						  </div>
+						</div>
+					  </div>
+
+					  <div class="single-work col-lg-4 col-md-6 col-sm-12 all web wow fadeInUp" data-wow-duration="1s">
+						<div class="relative">
+						  <div class="thumb">
+							<div class="overlay overlay-bg"></div>
+							<img class="image img-fluid" src="img/project/ota.jpg" alt="Product Search by Image">
+						  </div>
+						  <div class="middle">
+							<h4>Online Travel Agency | Web Development</h4>
+						  </div>
+						  <a class="overlay" href="portfolio-details_ota.html"></a>
+						  <div class="project-name-banner text-center">
+							<h5 style="font-size: 18px;"><h4>Online Travel Agency | Web Development</h4></h5>
+						  </div>
+						</div>
+					  </div>
 					
-					<div class="single-work col-lg-4 col-md-6 col-sm-12 all data_science wow fadeInUp" data-wow-duration="1s">
-						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w7_main.png" alt="">
-							</div>
-							<div class="middle">
-								<h4>Attendance System</h4>
-
-							</div>
-							<a class="overlay" href="portfolio-details_attendance.html"></a>
-						</div>
-					</div>
-					<div class="single-work col-lg-4 col-md-6 col-sm-12 all web wow fadeInUp" data-wow-duration="1s">
-						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w8_main.png" alt="">
-							</div>
-							<div class="middle">
-								<h4>Web development</h4>
-
-							</div>
-							<a class="overlay" href="portfolio-details_ota.html"></a>
-						</div>
-					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all web wow fadeInUp" data-wow-duration="1s">
 						<div class="relative">
 							<div class="thumb">
@@ -690,56 +714,49 @@
 	<!-- End Work Area Area -->
 
 
-	<!-- Start Service Area -->
-	<section class="service-area section-gap">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6 animate-box" data-animate-effect="fadeInLeft">
-					<div class="section-title">
-						<h2>Enthusiastic Areas</h2>
-						<!--<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
-							some for as low as $.17 each.</p>-->
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-3 col-md-6">
-					<div class="single-service wow fadeInUp" data-wow-duration="1s">
-						<span class="lnr lnr-database"></span>
-						<h4>
-							<span>Big Data</span>
-						</h4>
-						<!--<p>Desktop, computer vision and embedded systems</p>-->
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-6">
-					<div class="single-service wow fadeInUp" style="padding:33px;" data-wow-duration="1s" data-wow-delay="0.2s">
-						<span class="lnr lnr-chart-bars"></span>
-						<h4><p>Predictive Analytics & Modeling</p>  
-						</h4>
-						<!--<p>If you’re looking blank casvsettes on the web, you may confuse.</p>-->
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-6">
-					<div class="single-service wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
-						<span class="lnr lnr-screen"></span>
-						<h4><span>Computer Vision</span>
-						</h4>
-						<!--<p>If you’re looking blank casvsettes on the web, you may confuse.</p>-->
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-6">
-					<div class="single-service wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s">
-						<span class="lnr lnr-layers"></span>
-						<h4><span>Machine Learning</span>
-						</h4>
-						<!--<p>If you’re looking blank casvsettes on the web, you may confuse.</p>-->
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End Service Area -->
+<!-- Start Service Area -->
+<section class="service-area section-gap">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 animate-box" data-animate-effect="fadeInLeft">
+                <div class="section-title">
+                    <h2>Enthusiastic Areas</h2>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-3 col-md-6">
+                <div class="single-service wow fadeInUp" style="padding:33px; height: 100%;" data-wow-duration="1s" data-wow-delay="0.2s">
+                    <span class="lnr lnr-chart-bars"></span>
+                    <h4 class="service-title"><p>Deep Learning Architectures</p>  
+                    </h4>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <div class="single-service wow fadeInUp" style="padding:33px; height: 100%;" data-wow-duration="1s" data-wow-delay="0.2s">
+                    <span class="lnr lnr-chart-bars"></span>
+                    <h4 class="service-title"><p>Object Detection and Tracking</p>  
+                    </h4>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <div class="single-service wow fadeInUp" style="height: 100%;" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <span class="lnr lnr-screen"></span>
+                    <h4 class="service-title"><span>Semantic Segmentation and Instance Segmentation</span>
+                    </h4>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <div class="single-service wow fadeInUp" style="height: 100%;" data-wow-duration="1s" data-wow-delay="0.6s">
+                    <span class="lnr lnr-layers"></span>
+                    <h4 class="service-title"><span>Generative Models for Image Synthesis</span>
+                    </h4>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- End Service Area -->>
 
 <!-- Start Testimonials Area -->
 	<section class="testimonials_area section-gap" id="skills">
