--- a/portfolio-details_attendance.html
+++ b/portfolio-details_attendance.html
@@ -87,59 +87,42 @@
 	</section>
 	<!-- End banner Area -->
 
-	<!-- Portfolio Details Area -->
-	<section class="portfolio_details_area section-gap">
-		<div class="container">
-			<div class="portfolio_details_inner">
-				<div class="row">
-					<div class="col-md-6">
-						<div class="left_img">
-							<figure>
-							<img style="border: 10px solid #EEE; margin-left:20px;" width="600" src="img/project/attendance.png" class="enlarge" alt="">
-							<figcaption  style="margin-left:238px">Fig : Attendance System</figcaption>
-							</figure>
-						</div>
-					</div>
-					<div class="offset-md-1 col-md-5">
-						<div class="portfolio_right_text mt-30">
-							<h4>Facial Recognition Based Employee Attendance System</h4>
-							<p>
-							<div style="margin-left:17px;">
-							<ul style="list-style-type:square">
-									<li>Implemented  transfer  learningVGG19with  haar  cascade  feature  extraction  to  develop  anattendance solution.</a>
-									</li>
-									<li>Built Tkinter based user interface.
-									</li>	
-							
-								</ul></div>
-
-							<ul class="list">
-								<li><b>Used Tools: Python, Keras, VGG19, Tkinter.</b></li>
-								<li>Demo: <a href="https://youtu.be/hrsZFjiW5AE">Project Link 1</a> - <a href="https://youtu.be/7cTJlyCclZQ">Project Link 2</a></li>
-							</ul></div>
-							   
-							</p>
-							<!--<ul class="list">
-								<li><span>Rating</span>: <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i
-									 class="fa fa-star"></i></li>
-								<li><span>Client</span>: colorlib</li>
-								<li><span>Website</span>: colorlib.com</li>
-								<li><span>Completed</span>: 17 Aug 2018</li>
-							</ul>
-							<ul class="list social_details">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-behance"></i></a></li>
-								<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-								<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-							</ul>-->
-						</div>
-					</div>
-				</div>
+	<!-- Project Details Area -->
+<section class="project_details_area section-gap">
+	<div class="container">
+	  <div class="project_details_inner">
+		<div class="row">
+		  <div class="col-md-6">
+			<div class="left_img">
+			  <figure>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/7cTJlyCclZQ?si=nzfsveNZLe-_W7e7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<figcaption style="margin-left: 238px">Fig : Project Demonstration</figcaption>
+			  </figure>
 			</div>
+		  </div>
+		  <div class="offset-md-1 col-md-5">
+			<div class="project_right_text mt-30">
+			  <h4>Facial Recognition Based Employee Attendance with Haar Cascade & VGG19</h4>
+			  <p>
+				<div style="margin-left: 17px;">
+				  <ul style="list-style-type: square">
+					<li><strong>Project Overview:</strong> Developed an AI-based <strong>employee attendance system</strong> that streamlines employee enrollment with a quick data training process. The system boasts a user-friendly interface for daily identification and maintains individual records in a CSV file. Additionally, an improved version using the <strong>VGG19</strong> had also implemented for increasing the accurecy level.</li>
+					<li><strong>Project Link:</strong> <a href="https://github.com/somum/FacialRecognision-Based-EmployeeAttendance-with-Haar-cascade" target="_blank">https://github.com/somum/FacialRecognision-Based-EmployeeAttendance-with-Haar-cascade</a></li>
+					<li><strong>Language:</strong> Python</li>
+					<li><strong>Framework & Library:</strong> VGG19, Haar Cascade, Anaconda, Tkinter</li>
+					<li><strong>Total Number of Members:</strong> Solo Project</li>
+					<li><strong>Name of Part:</strong> Model Implementation, Interface Design, Dataset Collection</li>
+
+				  </ul>
+				</div>
+			  </p>
+			</div>
+		  </div>
 		</div>
-	</section>
-	<!-- End Portfolio Details Area -->
+	  </div>
+	</div>
+  </section>
+  <!-- End of Project Details Area -->
 
 	<!-- Start Contact Area -->
 	<section class="contact-area section-gap">
