--- a/portfolio-details_recommendation.html
+++ b/portfolio-details_recommendation.html
@@ -102,13 +102,13 @@
 					</div>
 					<div class="offset-md-1 col-md-5">
 						<div class="portfolio_right_text mt-30">
-							<h4>Product Recommendation System</h4>
+							<h4>Product Recommendation System (prototype)</h4>
 							<p>
 							<div style="margin-left:17px;">
 							<ul style="list-style-type:square">
 									<li>Cleaning, gathering & modification data of products ratings from users.</a>
 									</li>
-									<li>Implementation of Restricted Boltzmann Machines(RBM) model after normalizing data.
+									<li>Implementation of <strong>Boltzmann Machines(RBM) model </strong> after normalizing data.
 									</li>	
 									<li>Preparing structure for showing product recommendation for individual users.
 									</li>	
