--- a/portfolio-details_speech_to_text.html
+++ b/portfolio-details_speech_to_text.html
@@ -94,27 +94,27 @@
 		<div class="row">
 		  <div class="col-md-6">
 			<div class="left_img">
-				<figure>
-					<img style="border: 10px solid #EEE; margin-left:20px;" width="600" src="img/project/ota.jpg" class="enlarge" alt="">
-					<figcaption  style="margin-left:238px">Fig : WebView</figcaption>
-					</figure>
+			  <figure>
+				<iframe width="580" height="335" src="https://www.youtube.com/embed/T_aHvhXkCws?si=5h18jiZnuZsw1RKd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<figcaption style="margin-left: 238px">Fig : Project Demonstration</figcaption>
+			  </figure>
 			</div>
 		  </div>
 		  <div class="offset-md-1 col-md-5">
 			<div class="project_right_text mt-30">
-			  <h4>Sair AIR BD GSA Website</h4>
+			  <h4>Speech to Text (Editable) Conversion</h4>
 			  <p>
 				<div style="margin-left: 17px;">
 				  <ul style="list-style-type: square">
-					<li><strong>Project Overview:</strong> Developed the official website for Sair AIR BD GSA, serving as the company's digital identity. The website showcases various destinations and the corresponding <strong>travel packages</strong>  offered by the company. It also includes a <strong>Visa application section</strong>, allowing customers to apply for visas with the company providing follow-up status updates.</li>
-					<li><strong>Live:</strong> <a href="https://www.sairbd.com" target="_blank">https://www.sairbd.com</a></li>
-					<li><strong>Project Link:</strong> <a href="https://github.com/somum/GSA_Website_X_Company" target="_blank">https://github.com/somum/GSA_Website_X_Company</a></li>
-					<li><strong>Language:</strong> Python, JavaScript</li>
-					<li><strong>Frameworks & Server:</strong> Django Framework, Bootstrap, SQLite</li>
-					<li><strong>Tool:</strong> PyCharm</li>
-					<li><strong>Total Number of Members:</strong> 02</li>
-					<li><strong>Name of Part:</strong> Designing, Building, Testing, Deployment</li>
-					<li><strong>My Role:</strong> Full Stack (Leading)</li>
+					<li><strong>Project Period:</strong> September 2020 – November 2020</li>
+					<li><strong>Project Overview:</strong> Developed a system for converting <strong>speech</strong> to <strong>text</strong> using the <strong>Vosk us-en model</strong> and <strong>Kaldi</strong>. The system features an intuitive interface created with <strong>PyQt5</strong>, enabling users to record a <strong>video</strong> and automatically save the <strong>audio</strong> as an <strong>editable text file</strong> post-conversion. Utilized the <strong>Vosk model</strong> for <strong>audio-to-text transcription</strong> and <strong>Kaldi</strong> to enhance <strong>transcription accuracy</strong>. Resulting <strong>text files</strong> are fully <strong>editable</strong>, allowing users to make <strong>necessary corrections</strong>.</li>
+					<li><strong>Project Overview:</strong> <a href="https://bit.ly/3XURMKR" target="_blank">https://bit.ly/3XURMKR</a></li>
+					<li><strong>Language:</strong> Python</li>
+					<li><strong>Models & Library:</strong> VOSK, Kaldi</li>
+					<li><strong>Framework:</strong> PyQt5</li>
+					<li><strong>Total Number of Members:</strong> 05</li>
+					<li><strong>Name of Part:</strong> Planning, Defining, Building, Testing</li>
+					<li><strong>My Role:</strong> <strong>Led</strong> the team in Assigning Tasks, Model Building, and API Implementation</li>
 				  </ul>
 				</div>
 			  </p>
