--- a/portfolio-details_hair_simulation.html
+++ b/portfolio-details_hair_simulation.html
@@ -116,7 +116,7 @@
 									  <li><strong>Seamless Integration:</strong> Implemented Python, <strong>TensorFlow</strong>, OpenCV, Flask, and REST to seamlessly integrate the AI model into the e-commerce platform for a user-friendly experience.</li>
 									  <li><strong>Enhanced Interactivity:</strong> Enabled customers to simulate not only single hair colors but also intricate multi-color scenarios like gradient hair coloring.</li>
 									  <li><strong>Realistic Custom Coloring:</strong> Developed a precise <strong>custom coloring technique</strong>, resulting in an accurate and immersive virtual try-on process.</li>
-									  <li><strong>Efficient Deployment:</strong> Utilized <strong>Docker</strong>, <strong>uWSGI</strong>, and <strong>Nginx</strong> for streamlined deployment, ensuring optimal performance and scalability of the AI feature.</li>
+									  <li><strong>Efficient Deployment:</strong> Utilized <strong>Kubernetes</strong>,<strong>Docker</strong>, <strong>uWSGI</strong>, and <strong>Nginx</strong> for streamlined staging, testing, and deployment, ensuring optimal performance and scalability of the AI feature.</li>
 									  <li><strong>Continuous Improvement:</strong> Maintained an active media section to incorporate the latest updates, ensuring the project stays innovative and up-to-date.</li>
 									</ul>
 			
