--- a/portfolio-details_hair_generator.html
+++ b/portfolio-details_hair_generator.html
@@ -112,7 +112,7 @@
 									<li><strong>Project Title:</strong> Hairstyle Generator using Generative Modeling</li>
 									<li><strong>Project Duration:</strong> March 2023 – Ongoing</li>
 									<li><strong>Project Overview:</strong> This project focuses on <strong>advanced techniques</strong> for manipulating <strong>hair images</strong>. Leveraging the <strong>HairFit model</strong>, the process includes <strong>GAN-inversion</strong> and <strong>pose alignment</strong> to refine <strong>styles</strong>, in combination with <strong>StyleGAN2</strong> for foundational enhancements. The development extends to an <strong>Angular frontend</strong> with an <strong>API</strong>, offering users a seamless way to interact with the <strong>algorithms</strong>. This integration ensures a smooth experience, enabling users not only to enhance <strong>hair images</strong> but also to visualize and achieve their desired <strong>hairstyles</strong> realistically, based on provided examples.</li>
-									<li><strong>Deployment:</strong> Utilized <strong>Docker</strong>, <strong>Nginx</strong>, and <strong>uWSGI</strong> for streamlined deployment, ensuring optimal performance and scalability of the application.</li>
+									<li><strong>Efficient Deployment:</strong> Utilized <strong>Kubernetes</strong>,<strong>Docker</strong>, <strong>uWSGI</strong>, and <strong>Nginx</strong> for streamlined staging, testing, and deployment, ensuring optimal performance and scalability of the AI feature.</li>
 								
 							</ul>
 							<ul class="list" style="margin-top: 10px;">
