--- a/portfolio-details_hair_simulation.html
+++ b/portfolio-details_hair_simulation.html
@@ -112,7 +112,7 @@
 									<ul style="list-style-type:square">
 									  <li><strong>Project Leadership:</strong> Led a team to develop an AI feature for an e-commerce platform specializing in hair color, allowing customers to virtually try hair colors before purchase.</li>
 									  <li><strong>Data Processing:</strong> Collected, cleaned, and preprocessed a dataset of <strong>26,918</strong> hair images for accurate simulations across diverse hair types.</li>
-									  <li><strong>Advanced Model:</strong> Created a <strong>U-net</strong> based <strong>MobilenetV3</strong> model and introduced a <strong>custom coloring technique</strong> for single and multi-color simulations.</li>
+									  <li><strong>Advanced Model:</strong> Created a <strong>U-net</strong> based <strong>MobilenetV3</strong> model and introduced a <strong>custom coloring technique</strong> for single and multi-color simulations. Later on, optimized the model to make it faster and lighter with <strong>Onnx</strong> </li>
 									  <li><strong>Seamless Integration:</strong> Implemented Python, <strong>TensorFlow</strong>, OpenCV, Flask, and REST to seamlessly integrate the AI model into the e-commerce platform for a user-friendly experience.</li>
 									  <li><strong>Enhanced Interactivity:</strong> Enabled customers to simulate not only single hair colors but also intricate multi-color scenarios like gradient hair coloring.</li>
 									  <li><strong>Realistic Custom Coloring:</strong> Developed a precise <strong>custom coloring technique</strong>, resulting in an accurate and immersive virtual try-on process.</li>
@@ -124,7 +124,7 @@
 
 							<ul class="list" style="margin-top: 10px;">
 								<li><b><strong>My Role:</strong> Led the team in <strong>Model Building</strong>, <strong>Dataset Management</strong>, <strong>API Deployment</strong>, and <strong>Frontend Building</strong>.</b></li>
-								<li><b>Used Tools:  Python, Tensorflow, OpenCV, NumPy, Pandas, Matplotlib, Scikit-learn, Flask, REST.</b></li>
+								<li><b>Used Tools:  Python, Tensorflow, Onnx, OpenCV, NumPy, Pandas, Matplotlib, Scikit-learn, Flask, REST.</b></li>
 								<li>Project Article: <a href="https://medium.com/@saiful.somum/real-time-hair-color-simulation-c5441d5dcd8c">Medium</a></li>
 							</ul></div>
 							   
