--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 											<br>Currently, developing an advanced Hair Style Generator program using generative AI technology (StyleGAN 2).
 										</p>
 										<p class="timeline-skills">
-											<strong>Skills:</strong> Angular · Machine Learning · Computer Vision · Deep Learning · Python · TensorFlow · Flask · MySQL · React.js · PyTorch
+											<strong>Skills:</strong> Machine Learning · Computer Vision · Deep Learning · Python · TensorFlow · PyTorch · Flask · FastAPI · AWS · Docker · K8s · MySQL · PostgreSQL · React.js · Angular
 										</p>
 									</div>
 								</div>
@@ -859,7 +859,7 @@ NetBeans <b>|</b> Proteus <b>|</b> Arduino
 						</ul> -->
 						<div class="wow fadeIn" data-wow-duration="1s">
 							<p>
-								AWS(EC2, S3, RDS, sagemaker) <b>|</b> Docker <b>|</b> Git (CI/CD)
+								AWS(EC2, S3, RDS, sagemaker) <b>|</b> K8s <b>|</b> Docker <b>|</b> Git (CI/CD) <b>|</b> uWSGI <b>|</b> Nginx
 							</p>
 						</div>
 					</div>
